Fixed main overflow

--- a/wwwroot/css/LayoutDashboard.css
+++ b/wwwroot/css/LayoutDashboard.css
@@ -48,7 +48,7 @@ main {
   position: absolute;
   top: 6.1vh;
   left: 15%;
-  width: 90%;
+  width: 85%;
   height: 94vh;
   background-color: #f3f5f7;
 }
